2001-02-27  Tom Tromey  <tromey@redhat.com>

	* distdir.am (distcheck): Print error message if distclean failed
	to fully clean.

2001-02-27  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am (TESTS): s/yaccpvath/yaccvpath/.

2001-02-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/Makefile.am (TESTS): Added yaccvpath.test.
	* tests/yaccvpath.test: New file.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_install_var): Recognize whether predefined
	directories are `data' or `exec'.
	* libs.am, ltlib.am, progs.am, python.am, scripts.am: Install
	?EXEC?.
	* tests/instdata2.test: Update.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* texinfos.am: No ?EXEC? hook as currently installing TEXINFOS is
	necessarily in infodir.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in ($am_file): Be `local', as my'd variables used in
	`foreach' loops are always private to the loop.

2001-02-26  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: Add install.am.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&target_cmp, &dist_cmp): Do not prototype comparing
	routines, otherwise the elements to compare are passed in @_
	instead of $a and $b.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (%required_targets): `installcheck-am' is needed.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform_cond): Merge into...
	(&transform): this.
	Adjust all uses.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_dist): Use &transform instead of dedicated
	magic for DISTDIRS.
	But be sure to always do it.
	* distdir.am: Adjust.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in: Use File::Basename.
	(&dirname, &basename): Remove.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in ($me): New.
	Use it.
	(&usage): Display your full name.


2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.texi (Invoking Automake): Remove dead options.

2001-02-26  Akim Demaille  <akim@epita.fr>
