@@ -1,5 +1,10 @@
 2001-02-27  Tom Tromey  <tromey@redhat.com>
 
+	* distdir.am (distcheck): Fixed new code.
+
+	* tests/yaccvpath.test: Fail gracefully if bison/flex not found.
+	Only configure once.
+
 	* distdir.am (distcheck): Print error message if distclean failed
 	to fully clean.
 
